@@ -286,6 +286,19 @@ qt.highdpi:
     As an alternative to this, it's possible to set font sizes and the
     `zoom.default` setting.
 
+qt.workarounds.remove_service_workers:
+  type: Bool
+  default: false
+  desc: >-
+    Delete the QtWebEngine Service Worker directory on every start.
+
+    This workaround can help with certain crashes caused by an unknown QtWebEngine bug
+    related to Service Workers. Those crashes happen seemingly immediately on Windows;
+    after one hour of operation on other systems.
+
+    Note however that enabling this option *can lead to data loss* on some pages (as
+    Service Worker data isn't persisted) and will negatively impact start-up time.
+
 ## auto_save
 
 auto_save.interval:
