@@ -1,0 +1,11 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Service worker test</title>
+        <script>navigator.serviceWorker.register('worker.js')</script>
+    </head>
+    <body>
+        This page will register a service worker when loaded.
+    </body>
+</html>
